test/types/sync/ferguson/non-nilable-single-error.chpl
class MyClass { var x: int; }
var x: single unmanaged MyClass;
